--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Juan Fernando Yañez Galvan" />
     <meta name="keywords" content="ciudades tripleten" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="icon" href="./favicon.ico" />
   </head>
   <body>
     <page class="page">
