--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <title>Ciudades Tripleten</title>
@@ -10,7 +11,7 @@
     <link rel="icon" href="./favicon.ico" />
   </head>
   <body>
-    <page class="page">
+    <div class="page">
       <header class="header">
         <svg
           class="header__logo"
@@ -145,6 +146,6 @@
         </div>
         <p class="header__copyright">© 2024. Juan Fernando Yañez Galvan</p>
       </header>
-    </page>
+    </div>
   </body>
 </html>
